bg color of json button

--- a/index.ejs
+++ b/index.ejs
@@ -37,7 +37,7 @@
         background-color: #da7d35;
       }
       .json-button{
-        background-color: #4b7097;
+        background-color: #978d41;
       }
       .sign-in-button{
         background-color: #4b7097;
