add a title for home button

--- a/index.ejs
+++ b/index.ejs
@@ -25,6 +25,11 @@
         padding: 10px 20px;
         text-align: right;
       }
+      .nav h1{
+        margin: 0;
+        float: left;
+        color: #845a97;
+      }
       .button{
         display: inline-block;
         padding: 8px 12px;
@@ -115,6 +120,8 @@
   <body>
 
     <div class="nav">
+      <a href="/all"><h1>Instagrammer</h1></a>
+
       <a href="/auth/instagram" title="Sign in with Instagram">
         <span class="button sign-in-button">
           <i class="fab fa-instagram"></i> <span>Sign in with Instagram</span>
