--- a/index.ejs
+++ b/index.ejs
@@ -120,7 +120,7 @@
   <body>
 
     <div class="nav">
-      <a href="/all"><h1>INSTIE</h1></a>
+      <a href="/all"><h1>GRAMMER</h1></a>
 
       <a href="/auth/instagram" title="Sign in with Instagram">
         <span class="button sign-in-button">
